2007-05-04  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/gd.trm (PNG_image): Fixed an image clipping bug in x dimension.

2007-05-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (key_sample_point_pm3d):  The sample point in the key
	failed to note an explicit "lc rgb 'foo'" in the plot command, leading
	to a color mismatch between the plot and the key.  Bugfix.

2007-04-30  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp:
        * src/wxterminal/wxt_gui.h:
	(wxt_put_tmptext, wxtFrame::OnSetStatusText):
	Change the text of the status bar asynchronously by sending a message to
	the GUI thread instead of doing it in a mutex. This particular GUI
	change from a separate thread was crashing on wxMac.
	(wxt_cleanup): Send an event to exit the main loop, destroying the
	windows is not enough.

	* src/wxterminal/gp_cairo.c (gp_cairo_initialize_plot):
	Initialize plot->rounded to satisfy valgrind.

2007-04-29  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* man/gnuplot.1: Document environment variables and the
	initialization file.  Mention 3D plots and nonlinear least-squares
	fitting.

2007-04-29  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	(wxt_exec_event) Add a returned boolean, to simplify callers.
	(wxt_process_one_event) Factorize some code in this new function.
	(wxt_atexit) Rework the "persist" effect code, do not use threads
	anymore, no more stupid loop either; this prevents gnuplot from
	showing in `top` after exitting in "persist" mode, and prepares
	for further improvements (wxMac included).

2007-04-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/tabulate.c src/tabulate.h src/Makefile.am:  Consolidate the code
	supporting "set table <foo>" into a new source file.
	Add support for tabular output of style LABELPOINTS in 2D and 3D.
	Add support for tabular output of style VECTOR in 2D and 3D.
